Fixed vertical spacing on home and about pages.

--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -133,8 +133,12 @@
     row-gap: 10vw;
     width: 100vw;
     height: 100%;
-    padding: 40px 6.67vw;
+    padding: 10px 6.67vw;
   }
+
+  .cta {
+    margin-bottom: 40px;
+  }  
 
   // Projects Page
   .projects {
